# holochain-challenge-4

./: CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json
dnas/chatroom/workdir/: dna.yaml
dnas/chatroom/zomes/coordinator/chatroom/: Cargo.toml
dnas/chatroom/zomes/coordinator/chatroom/src/: all_rooms.rs  lib.rs  member_to_rooms.rs  message.rs  room.rs
dnas/chatroom/zomes/integrity/chatroom/: Cargo.toml
dnas/chatroom/zomes/integrity/chatroom/src/: lib.rs  member_to_rooms.rs  message.rs  room.rs
tests/src/chatroom/chatroom/: all-rooms.test.ts  common.ts  member-to-rooms.test.ts  message.test.ts  room.test.ts
ui/: package.json
ui/src/: App.svelte  Banner.svelte  NavBar.svelte  NavButton.svelte  contexts.ts  types.ts
ui/src/chatroom/chatroom/: AllRooms.svelte  CreateMessage.svelte  CreateRoom.svelte  MessageDetail.svelte  MessagesForRoom.svelte  RoomDetail.svelte  RoomsForMember.svelte  types.ts
ui/src/chatroom/premade-chatroom/: Conversation.svelte  CreateMessage.svelte  CreateRoom.svelte  Message.svelte  RoomsForMember.svelte  SearchRooms.svelte  SearchRoomsListing.svelte  YourRoomListing.svelte  YourRooms.svelte
ui/src/stores/: navigation.ts
workdir/: happ.yaml  web-happ.yaml
